chore: replace deprecated method to the preferred one